Add 'Formação' section and update content

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="#experiencia" class="hover:text-blue-400 text-gray-200">Experiência</a></li>
         <li><a href="#projetos" class="hover:text-blue-400 text-gray-200">Projetos</a></li>
         <li><a href="#habilidades" class="hover:text-blue-400 text-gray-200">Habilidades</a></li>
+        <li><a href="#formacao" class="hover:text-blue-400 text-gray-200">Formação</a></li>
         <li><a href="#cursos" class="hover:text-blue-400 text-gray-200">Cursos</a></li>
         <li><a href="#contato" class="hover:text-blue-400 text-gray-200">Contato</a></li>
       </ul>
@@ -45,6 +46,7 @@
         <li><a href="#experiencia" class="block hover:text-blue-400 text-gray-200">Experiência</a></li>
         <li><a href="#projetos" class="block hover:text-blue-400 text-gray-200">Projetos</a></li>
         <li><a href="#habilidades" class="block hover:text-blue-400 text-gray-200">Habilidades</a></li>
+        <li><a href="#formacao" class="block hover:text-blue-400 text-gray-200">Formação</a></li>
         <li><a href="#cursos" class="block hover:text-blue-400 text-gray-200">Cursos</a></li>
         <li><a href="#contato" class="block hover:text-blue-400 text-gray-200">Contato</a></li>
       </ul>
@@ -92,31 +94,22 @@
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Experiência Profissional</h2>
       <div class="space-y-8">
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Estagiário Desenvolvedor de Automação de Processos e Analista de
-            Suporte RPA</h3>
+          <h3 class="text-xl font-bold text-blue-300">Estagiário Desenvolvedor de Automação de Processos e Analista de Suporte RPA</h3>
           <p class="text-gray-400">Neurodev | Set - Nov 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
-            <li>Desenvolvi e mantive 15+ fluxos de automação críticos com N8N, conectando 4 sistemas diferentes via
-              Webhooks e APIs REST, <strong>reduzindo tempo de processamento em 40%</strong> e <strong>eliminando 25
-                horas/mês de trabalho manual</strong>.</li>
-            <li><strong>Prompt Engineering Avançado</strong>: Otimizei prompts e workflows de IA que <strong>reduziram
-                tempo médio de resposta em 45%</strong> (de 2h para 1.1h).</li>
-            <li><strong>Sustentação de Automação Crítica</strong>: Responsável único pela manutenção de solução RPA em
-              Python que processa <strong>800+ transações diárias</strong>, implementando monitoramento proativo que
-              <strong>reduziu downtime em 93,5%</strong> (de 35h/mês para 2.25h/mês).
+            <li>Desenvolvi e mantive 15+ fluxos de automação críticos com N8N, conectando 4 sistemas diferentes via Webhooks e APIs REST, <strong>reduzindo tempo de processamento em 40%</strong> e <strong>eliminando 25 horas/mês de trabalho manual</strong>.</li>
+            <li><strong>Prompt Engineering Avançado</strong>: Otimizei prompts e workflows de IA que <strong>reduziram tempo médio de resposta em 45%</strong> (de 2h para 1.1h).</li>
+            <li><strong>Sustentação de Automação Crítica</strong>: Responsável único pela manutenção de solução RPA em Python que processa <strong>800+ transações diárias</strong>, implementando monitoramento proativo que <strong>reduziu downtime em 93,5%</strong> (de 35h/mês para 2.25h/mês).
             </li>
-            <li><strong>DevOps & Troubleshooting</strong>: Gerenciei ambiente de produção com Docker, PostgreSQL e Linux
-              CLI.</li>
+            <li><strong>DevOps & Troubleshooting</strong>: Gerenciei ambiente de produção com Docker, PostgreSQL e Linux CLI.</li>
           </ul>
         </div>
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Desenvolvedor Júnior de Automação de Processos com IA</h3>
           <p class="text-gray-400">Bnect | Ago - Set 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
-            <li>Desenvolvi e implementei agentes inteligentes para atendimento multicanal (WhatsApp e Instagram) de
-              forma totalmente autônoma, utilizando IA generativa para otimizar a interação com o usuário.</li>
-            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas
-              externos (CRM, Bling, Jetcommerce, Google Calendar).</li>
+            <li>Desenvolvi e implementei agentes inteligentes para atendimento multicanal (WhatsApp e Instagram) de forma totalmente autônoma, utilizando IA generativa para otimizar a interação com o usuário.</li>
+            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas externos (CRM, Bling, Jetcommerce, Google Calendar).</li>
           </ul>
         </div>
       </div>
@@ -160,6 +153,27 @@
           <a href="https://github.com/JonasaAugusto/instagram-comments" target="_blank"
             class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
+        <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">Sistema Full Stack de Gestão</h3>
+          <p class="text-gray-200">Aplicação web com arquitetura MVC e desktop com Windows Forms para gestão de tarefas e usuários.</p>
+          <div class="flex flex-wrap gap-2 mt-3">
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">PHP</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">C#</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">MySQL</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows Forms</span>
+          </div>
+          <p class="text-blue-400 mt-2 italic">Projeto privado</p>
+        </div>
+        <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">Temporizador de Desligamento (Windows)</h3>
+          <p class="text-gray-200">Aplicativo desktop com interface gráfica para agendar ou cancelar o desligamento do sistema Windows.</p>
+          <div class="flex flex-wrap gap-2 mt-3">
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Python</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Tkinter</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows CLI</span>
+          </div>
+          <p class="text-blue-400 mt-2 italic">Projeto privado</p>
+        </div>
       </div>
     </div>
   </section>
@@ -192,24 +206,64 @@
     </div>
   </section>
 
-  <section id="cursos" class="py-20 bg-gray-800" data-aos="fade-up">
+  <section id="formacao" class="py-20 bg-gray-800" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-10 text-white">Cursos & Certificações em Andamento</h2>
+      <h2 class="text-3xl font-bold text-center mb-10 text-white">Formação Acadêmica</h2>
+      <div class="space-y-6">
+        <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">Engenharia de Software</h3>
+          <p class="text-gray-400">Universidade Estácio de Sá | 2023 – Presente (6º Semestre)</p>
+          <p class="mt-2 text-gray-200"><strong>Média Global:</strong> 9.3/10</p>
+        </div>
+        <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">Técnico em Desenvolvimento de Software</h3>
+          <p class="text-gray-400">SENAI Juiz de Fora | 2021 – 2023</p>
+          <p class="mt-2 text-gray-200"><strong>Média Global:</strong> 8.0/10</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="cursos" class="py-20 bg-gray-900" data-aos="fade-up">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-3xl font-bold text-center mb-10 text-white">Cursos e Certificações</h2>
+
+      <h3 class="text-2xl font-semibold mb-6 text-blue-300">Concluídos</h3>
+      <div class="space-y-4 mb-12">
+        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h4 class="font-bold">Programação de Sistemas de Informação</h4>
+          <p class="text-gray-400">Centro Universitário Estácio</p>
+        </div>
+        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h4 class="font-bold">Direito e Privacidade dos Usuários</h4>
+          <p class="text-gray-400">Centro Universitário Estácio</p>
+        </div>
+        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h4 class="font-bold">Programação Web</h4>
+          <p class="text-gray-400">Centro Universitário Estácio</p>
+        </div>
+        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
+          <h4 class="font-bold">Especialista em Inteligência Artificial</h4>
+          <p class="text-gray-400">Academia de Inteligência Artificial</p>
+        </div>
+      </div>
+
+      <h3 class="text-2xl font-semibold mb-6 text-blue-300">Em Andamento</h3>
       <div class="space-y-4">
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">AWS Cloud Practitioner</h3>
+          <h4 class="font-bold">AWS Cloud Practitioner</h4>
           <p class="text-gray-400">Conclusão prevista: Jan 2026</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Microsoft Certified: Azure Fundamentals</h3>
+          <h4 class="font-bold">Microsoft Certified: Azure Fundamentals</h4>
           <p class="text-gray-400">Planejado: Q1 2026</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Python do básico ao avançado + IA</h3>
+          <h4 class="font-bold">Python do básico ao avançado + IA</h4>
           <p class="text-gray-400">Em estudo</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Inteligência Artificial e Machine Learning: O Guia Completo</h3>
+          <h4 class="font-bold">Inteligência Artificial e Machine Learning: O Guia Completo</h4>
           <p class="text-gray-400">Em estudo</p>
         </div>
       </div>
@@ -227,7 +281,6 @@
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <textarea name="message" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
-        <!-- Campos para personalizar a página de feedback -->
         <input type="hidden" name="_feedback.whitelabel" value="true" />
         <input type="hidden" name="_feedback.dark" value="true" />
         <input type="hidden" name="_feedback.success.title" value="Mensagem enviada!" />
@@ -285,10 +338,8 @@
       const contactForm = document.getElementById('contact-form');
       const submitBtn = document.getElementById('submit-btn');
       const spinner = submitBtn.querySelector('svg');
-
       if (contactForm) {
         contactForm.addEventListener('submit', (e) => {
-          // Mostrar spinner e desabilitar botão
           submitBtn.disabled = true;
           spinner.classList.remove('hidden');
           submitBtn.innerHTML = `
