--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         com autonomia total.
       </p>
       <p class="mt-4 text-lg text-gray-200">
-        Busco posicionar-me como Dev Back-End e especialista em IA aplicada a negócios, com certificações cloud em
+        Busco posicionar-me como Dev Back-End com Python e C# .NET e especialista em IA aplicada a negócios, com certificações cloud em
         progresso (AWS/Azure).
       </p>
     </div>
@@ -109,7 +109,7 @@
           <p class="text-gray-400">Bnect | Ago - Set 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
             <li>Desenvolvi e implementei agentes inteligentes para atendimento multicanal (WhatsApp e Instagram) de forma totalmente autônoma, utilizando IA generativa para otimizar a interação com o usuário.</li>
-            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas externos (CRM, Bling, Jetcommerce, Google Calendar).</li>
+            <li>Automatizei processos internos, geração de conteúdo e execução de ações backend integradas a sistemas externos (CRM, Bling, Jetcommerce, Google Calendar, Sheets).</li>
           </ul>
         </div>
       </div>
@@ -161,6 +161,7 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">C#</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">MySQL</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows Forms</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">HTML, CSS, JS, Json, Ajax/span>
           </div>
           <p class="text-blue-400 mt-2 italic">Projeto privado</p>
         </div>
@@ -184,7 +185,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <div class="p-4 bg-gray-700 rounded-lg text-gray-100">
           <h3 class="font-bold text-lg text-blue-300">Linguagens</h3>
-          <p class="text-gray-200">Python, JavaScript, C#, PHP, Java, SQL</p>
+          <p class="text-gray-200">Python, C#, JavaScript, PHP, Java, SQL</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg text-gray-100">
           <h3 class="font-bold text-lg text-blue-300">Back-End</h3>
