Update project description and remove duplicate section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
             class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
         <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">Temporizador de Desligamento (Windows)</h3>
+          <p class="text-gray-200">Aplicativo desktop com interface gráfica para agendar ou cancelar o desligamento do sistema Windows.</p>
+          <div class="flex flex-wrap gap-2 mt-3">
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Python</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Tkinter</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows CLI</span>
+          </div>
+            <a href="https://github.com/JonasaAugusto/Windows-Shutdown-Timer" target="_blank"
+              class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
+        </div>
+        <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Sistema Full Stack de Gestão</h3>
           <p class="text-gray-200">Aplicação web com arquitetura MVC e desktop com Windows Forms para gestão de tarefas e usuários.</p>
           <div class="flex flex-wrap gap-2 mt-3">
@@ -163,17 +174,7 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows Forms</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">HTML, CSS, JS, Json, Ajax/span>
           </div>
-          <p class="text-blue-400 mt-2 italic">Projeto privado</p>
-        </div>
-        <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
-          <h3 class="text-xl font-bold text-blue-300">Temporizador de Desligamento (Windows)</h3>
-          <p class="text-gray-200">Aplicativo desktop com interface gráfica para agendar ou cancelar o desligamento do sistema Windows.</p>
-          <div class="flex flex-wrap gap-2 mt-3">
-            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Python</span>
-            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Tkinter</span>
-            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows CLI</span>
-          </div>
-          <p class="text-blue-400 mt-2 italic">Projeto privado</p>
+          <p class="text-blue-400 mt-2 italic">TCC da Formação Técnica</p>
         </div>
       </div>
     </div>
