Split combined skills into individual spans

--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">C#</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">MySQL</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows Forms</span>
-            <span class="bg-gray-600 px-2 py-1 rounded text-xs">HTML, CSS, JS, Json, Ajax/span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">HTML</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">CSS</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">JS</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Json</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Ajax</span>
           </div>
           <p class="text-blue-400 mt-2 italic">TCC da Formação Técnica</p>
         </div>
