Add Project_DarkUI section to index.html
Added a new project section for 'Project_DarkUI' with details about the desktop application.

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Tkinter</span>
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows CLI</span>
           </div>
-            <a href="https://github.com/JonasaAugusto/Windows-Shutdown-Timer" target="_blank"
-              class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
+          <a href="https://github.com/JonasaAugusto/Windows-Shutdown-Timer" target="_blank"
+            class="text-blue-400 hover:underline mt-2 inline-block">Ver no GitHub</a>
         </div>
         <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">Sistema Full Stack de Gestão</h3>
@@ -179,6 +179,18 @@
             <span class="bg-gray-600 px-2 py-1 rounded text-xs">Ajax</span>
           </div>
           <p class="text-blue-400 mt-2 italic">TCC da Formação Técnica</p>
+        </div>
+        <!-- Novo projeto: Project_DarkUI -->
+        <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
+          <h3 class="text-xl font-bold text-blue-300">App Desktop</h3>
+          <p class="text-gray-200">Aplicação desktop com interface minimalista em modo escuro, tela de login e cadastro com validações e banco de dados SQLite.</p>
+          <div class="flex flex-wrap gap-2 mt-3">
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">C#</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Windows Forms</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">SQLite</span>
+            <span class="bg-gray-600 px-2 py-1 rounded text-xs">Segurança</span>
+          </div>
+          <p class="text-blue-400 mt-2 italic">Projeto privado — inclui criptografia de senhas, validação de e-mail e proteção contra injeção SQL.</p>
         </div>
       </div>
     </div>
