Add Bootstrap Icons and update contact form text
Added Bootstrap Icons stylesheet and updated contact form text.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -180,7 +181,6 @@
           </div>
           <p class="text-blue-400 mt-2 italic">TCC da Formação Técnica</p>
         </div>
-        <!-- Novo projeto: Project_DarkUI -->
         <div class="bg-gray-700 p-6 rounded-lg shadow text-gray-100">
           <h3 class="text-xl font-bold text-blue-300">App Desktop</h3>
           <p class="text-gray-200">Aplicação desktop com interface minimalista em modo escuro, tela de login e cadastro com validações e banco de dados SQLite.</p>
@@ -291,11 +291,11 @@
   <section id="contato" class="py-20 bg-gray-800 text-white" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
-      <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
+      <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo (envia um e-mail diretamente para mim) ou me encontre nas redes:</p>
       <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
         <input type="text" name="name" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
-        <input type="email" name="email" placeholder="E-mail" required
+        <input type="email" name="email" placeholder="Seu e-mail" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <textarea name="message" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
@@ -315,9 +315,15 @@
         </button>
       </form>
       <div class="flex justify-center space-x-6 mt-8">
-        <a href="mailto:jonasaugustoprofissional@gmail.com" class="text-xl hover:text-blue-300">📧 E-mail</a>
-        <a href="https://linkedin.com/in/jonasaugustosantos" target="_blank" class="text-xl hover:text-blue-300">💼 LinkedIn</a>
-        <a href="https://github.com/JonasaAugusto" target="_blank" class="text-xl hover:text-blue-300">🐙 GitHub</a>
+        <a href="https://www.instagram.com/jonasaaugusto/" target="_blank" class="text-xl hover:text-pink-400">
+          <i class="bi bi-instagram"></i> Instagram
+        </a>
+        <a href="https://linkedin.com/in/jonasaugustosantos" target="_blank" class="text-xl hover:text-blue-300">
+          <i class="bi bi-linkedin"></i> LinkedIn
+        </a>
+        <a href="https://github.com/JonasaAugusto" target="_blank" class="text-xl hover:text-gray-300">
+          <i class="bi bi-github"></i> GitHub
+        </a>
       </div>
     </div>
   </section>
