Update contact form field names for consistency

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo (envia um e-mail diretamente para mim) ou me encontre nas redes:</p>
       <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
-        <input type="text" name="name" placeholder="Nome" required
+        <input type="text" name="Nome" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
-        <input type="email" name="email" placeholder="Seu e-mail" required
+        <input type="email" name="Email" placeholder="Seu e-mail" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
-        <textarea name="message" placeholder="Mensagem" required
+        <textarea name="Conteúdo da Mensagem:" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
         <input type="hidden" name="_feedback.whitelabel" value="true" />
         <input type="hidden" name="_feedback.dark" value="true" />
