--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   <section id="contato" class="py-20 bg-gray-800 text-white" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
-      <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo (envia um e-mail diretamente para mim) ou me encontre nas redes:</p>
+      <p class="text-center mb-6 text-gray-200">Este Formulário envia um e-mail diretamente para mim:</p>
       <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
         <input type="text" name="Nome" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
