--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </header>
   <section id="hero" class="min-h-screen flex items-center justify-center bg-gradient-to-b from-gray-900 to-black text-white text-center pt-16">
     <div class="max-w-3xl px-4">
-      <h1 class="text-4xl md:text-5xl font-bold mb-2">Jonas Augusto.</h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-2">Jonas Augusto</h1>
       <p class="text-lg md:text-xl mb-6 text-gray-200">
         <span id="typed"></span>
       </p>
@@ -115,7 +115,7 @@
       </div>
       <div class="mt-8 bg-gray-800/50 rounded-lg p-4 border border-red-500/30">
         <p class="text-sm text-gray-300 italic">
-          "O tempo não faz o adulto; o problema resolvido, sim. A complexidade que você abraça hoje é o pilar da sua resiliência de amanhã."
+          "O tempo não faz o adulto; o problema resolvido, sim. A complexidade que você abraça hoje é o pilar da sua resiliência de amanhã." - Jonas Augusto.
         </p>
       </div>
     </div>
