--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
       </div>
       <div class="mt-8 bg-gray-800/50 rounded-lg p-4 border border-red-500/30">
         <p class="text-sm text-gray-300 italic">
-          "O tempo não faz o adulto; o problema resolvido, sim. A complexidade que você abraça hoje é o pilar da sua
-          resiliência de amanhã." - Jonas Augusto.
+          "A complexidade que você abraça hoje é o pilar da sua resiliência de amanhã." - Jonas Augusto.
         </p>
       </div>
     </div>
@@ -139,8 +138,8 @@
         oportunidades de aprendizado e impacto.
       </p>
       <p class="mt-4 text-lg text-gray-200">
-        Minha trajetória inclui atuação prática em ambientes de alta pressão, o que me tornou um desenvolvedor
-        resiliente, autodidata e orientado a resultados. Busco times onde a capacidade de resolver problemas seja tão
+        Minha trajetória inclui atuação prática em ambientes de alta pressão, o que me tornou um desenvolvedor 
+        autodidata e orientado a resultados. Busco times onde a capacidade de resolver problemas seja tão
         valorizada quanto o código limpo.
       </p>
       <div class="mt-8 bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg p-4 text-center">
@@ -156,7 +155,7 @@
       <div class="space-y-8">
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-blue-500">
           <h3 class="text-xl font-bold text-blue-300">Desenvolvedor de Automação de Processos com IA</h3>
-          <p class="text-gray-400">Neurodev | Set – Nov 2025</p>
+          <p class="text-gray-400">NEURODEV - Startup | Set – Nov 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
             <li>Construí e mantive 15+ fluxos de automação críticos com N8N, conectando 4 sistemas distintos via
               Webhooks e APIs REST, <strong>reduzindo tempo de processamento em 40%</strong> e <strong>eliminando 25
@@ -168,7 +167,7 @@
         </div>
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-purple-500">
           <h3 class="text-xl font-bold text-blue-300">Analista de Suporte RPA</h3>
-          <p class="text-gray-400">Neurodev | Set – Nov 2025</p>
+          <p class="text-gray-400">NEURODEV - Startup | Set – Nov 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
             <li><strong>Sustentação de Automação Crítica</strong>: Único responsável pela manutenção de solução RPA em
               Python que processa <strong>800+ transações diárias</strong>, com monitoramento proativo que
@@ -183,7 +182,7 @@
         </div>
         <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-purple-500">
           <h3 class="text-xl font-bold text-blue-300">Desenvolvedor Júnior de Automação com IA Generativa</h3>
-          <p class="text-gray-400">Bnect | Ago – Set 2025</p>
+          <p class="text-gray-400">BNECT - Startup Early-Stage | Ago – Set 2025</p>
           <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
             <li>Desenvolvi agentes inteligentes para atendimento multicanal (WhatsApp e Instagram), utilizando IA
               generativa para personalizar interações e reduzir carga operacional.</li>
