Update course listings in index.html
Removed completed course entry and updated course status.

--- a/index.html
+++ b/index.html
@@ -576,6 +576,10 @@
       <h3 class="text-2xl font-semibold mb-6 text-blue-300">Concluídos</h3>
       <div class="space-y-4 mb-12">
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-green-500">
+          <h4 class="font-bold">Python do básico ao avançado + IA</h4>
+          <p class="text-gray-400">Caio Henrique Lemos Sampaio | Udemy</p>
+        </div>
+        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-green-500">
           <h4 class="font-bold">Programação de Sistemas de Informação</h4>
           <p class="text-gray-400">Centro Universitário Estácio</p>
         </div>
@@ -601,10 +605,6 @@
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-yellow-500">
           <h4 class="font-bold">Microsoft Certified: Azure Fundamentals</h4>
           <p class="text-gray-400">Planejado: Q1 2026</p>
-        </div>
-        <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-yellow-500">
-          <h4 class="font-bold">Python do básico ao avançado + IA</h4>
-          <p class="text-gray-400">Caio Henrique Lemos Sampaio | Em estudo</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-yellow-500">
           <h4 class="font-bold">Inteligência Artificial e Machine Learning: O Guia Completo</h4>
