--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
           class="text-xl hover:text-pink-400 transition-colors">
           <i class="bi bi-instagram"></i> Instagram
         </a>
-        <a href="https://linkedin.com/in/jonasaugustosantos" target="_blank"
+        <a href="https://www.linkedin.com/in/jonasaaugusto/" target="_blank"
           class="text-xl hover:text-blue-300 transition-colors">
           <i class="bi bi-linkedin"></i> LinkedIn
         </a>
