--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR" class="scroll-pt-20">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,6 @@
       background-color: #111827;
       color: #f9fafb;
     }
-
     .challenge-badge {
       position: absolute;
       top: -8px;
@@ -33,13 +31,11 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       border: 2px solid #111827;
     }
-
     .problem-solution {
       border-left: 3px solid #3b82f6;
       padding-left: 1.5rem;
       margin: 1rem 0;
     }
-
     .solution-highlight {
       background: linear-gradient(135deg, rgba(59, 130, 246, 0.15), rgba(37, 99, 235, 0.1));
       border-radius: 0.5rem;
@@ -71,7 +67,6 @@
     }
   </script>
 </head>
-
 <body class="bg-gray-900 text-white">
   <header class="fixed top-0 left-0 right-0 bg-gray-800 shadow-md z-50 h-16 flex items-center px-4">
     <div class="max-w-6xl mx-auto w-full flex justify-between items-center">
@@ -192,6 +187,16 @@
               para criar integrações robustas e autossustentáveis com alta disponibilidade.</li>
             <li><strong>Resolução em Tempo Real</strong>: Implementei estratégias de fallback, retry com backoff e
               circuit breakers para garantir continuidade operacional frente a falhas imprevistas.</li>
+          </ul>
+        </div>
+        <div class="p-6 bg-gray-700 rounded-lg shadow text-gray-100 border-l-4 border-purple-500">
+          <h3 class="text-xl font-bold text-blue-300">Analista de Requisitos de Software</h3>
+          <p class="text-gray-400">Volpatto Engenharia e Arquitetura de Guaíra LTDA · Freelance | Mai 2023 – Set 2023 · 5 mos</p>
+          <ul class="mt-3 list-disc pl-5 space-y-1 text-gray-200">
+            <li>Desenvolvi um documento completo de requisitos funcionais e não funcionais para um software desktop de gestão empresarial.</li>
+            <li>Realizei análise detalhada dos processos da empresa, mapeando fluxos de trabalho para 6 serviços principais: projetos arquitetônicos, regularização de obras, projetos complementares, visto de conclusão, gestão de INSS/averbação e projetos de interiores.</li>
+            <li>Documentei funcionalidades como gestão de clientes/funcionários, agendamento de reuniões com lembretes por WhatsApp, checklists automatizados, emissão de boletos com multas por atraso, controle financeiro integrado e notificações de cumprimento de prazos.</li>
+            <li>O software foi projetado para otimizar operações, reduzir retrabalho e padronizar processos de engenharia e arquitetura.</li>
           </ul>
         </div>
       </div>
@@ -528,7 +533,7 @@
         </div>
         <div class="p-4 bg-gray-700 rounded-lg text-gray-100 border-l-4 border-pink-500">
           <h3 class="font-bold text-lg text-blue-300">Metodologias</h3>
-          <p class="text-gray-200">Scrum, UML, Troubleshooting Sistemático, Resolução de Problemas Complexos,
+          <p class="text-gray-200">Scrum, UML, BPMN, Troubleshooting Sistemático, Resolução de Problemas Complexos,
             MLOps/LLMOps</p>
         </div>
         <div class="p-4 bg-gray-700 rounded-lg text-gray-100 border-l-4 border-indigo-500">
@@ -734,5 +739,4 @@
     });
   </script>
 </body>
-
 </html>
